--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 certifi==2024.8.30
 charset-normalizer==3.4.0
+et_xmlfile==2.0.0
 filelock==3.16.1
 fsspec==2024.10.0
 huggingface-hub==0.26.2
@@ -21,15 +22,16 @@ nvidia-cusparse-cu12==12.3.1.170
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
+PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 safetensors==0.4.5
-setuptools==75.3.0
 six==1.16.0
 sympy==1.13.1
 tokenizers==0.20.3
